# rust-stock-scanner

./: .env.example  .gitignore  .watch.toml  AKSHARE_INTEGRATION.md  CLAUDE.md  Cargo.toml  DEV_SETUP.md  DOCKER.md  Dockerfile  Dockerfile.dev  FRONTEND_REFACTORING_REPORT.md  README.md  akshare-service.Dockerfile  akshare-service.Dockerfile.dev  akshare_service.py  build.rs  build.sh  cleanup_api_key.sh  config.json  config.json.example  dev.sh  docker-compose.dev.yml  docker-compose.yml  final_markdown_verification.sh  requirements.txt  setup_akshare_service.sh  setup_glm_api.sh  setup_glm_key.sh  stock_analysis_000001_20250803T142508.md  streaming_test_report.md  test_all_providers  test_api.sh  test_chips_strategies.sh  test_config.js  test_enhanced_analysis.py  test_glm_url  test_markdown.html  test_markdown.sh  test_markdown_comprehensive.html  test_markdown_fixed.html  (+8 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json
database/: init.sql
nginx/: nginx.conf
rust-stock-analyzer/: .dockerignore  Cargo.toml  README.md  docker-compose.yml  setup_database.sh  verify_database_integration.sh
rust-stock-analyzer/src/: ai_service.rs  data_fetcher.rs  database.rs  handlers.rs
rust-stock-analyzer/templates/: batch.html  config.html
src/: ai_service.rs  analyzer.rs  auth.rs  cache.rs  chip_monitor.rs  currency.rs  data_fetcher.rs  database.rs  handlers.rs  main.rs  models.rs  signal_alerts.rs  trading_strategies.rs
templates/: index.html  test_config.html  test_fix.html
