[package]
name = "rust-stock-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5"
actix-rt = "2.9"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.14"
env_logger = "0.11"
log = "0.4"
futures = "0.3"
async-stream = "0.3"
bytes = "1.0"
dashmap = "5.5"
actix-ws = "0.2"
tera = "1.19"
rand = "0.8"
async-trait = "0.1"
jsonwebtoken = "9.2"
bcrypt = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json"] }
